# BORIS-macOS

./: pyproject.toml
boris/: behavior_shortcut_qevent.py  core.py  ipc_mpv.py  keyboard_utils.py  observation_operations.py  version.py
tests/: test_ipc_mpv.py  test_keyboard_utils.py
