[project]
name = "boris-macos"
version = "9.10+macos.1"
description = "BORIS on macOS - Behavioral Observation Research Interactive Software"
authors = [
  { name = "Olivier Friard", email = "olivier.friard@unito.it" },
  { name = "Daniel San Miguel", email = "dasanmiguel@pm.me" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
classifiers=[
        "Topic :: Scientific/Engineering",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "Programming Language :: Python :: 3.12",        
        "Operating System :: macOS",
    ]
dependencies = [
    "exifread==3.5.1",
    "numpy==2.3.2",
    "matplotlib==3.10.5",
    "pandas==2.3.2",
    "tablib[cli,html,ods,pandas,xls,xlsx]==3.8.0",
    "pyreadr==0.5.3",
    "pyside6==6.10",
    "hachoir==3.3.0",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "pyqtgraph>=0.14.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
r = ["rpy2>=3.6.1"]

[project.urls]
Homepage = "http://www.boris.unito.it"
Documentation = "https://boris.readthedocs.io/en/latest/"
Source_code = "https://github.com/slagathor69/BORIS-MacOS"
Issues = "https://github.com/slagathor69/BORIS-MacOS/issues"
Upstream = "https://github.com/olivierfriard/BORIS"

[project.scripts]
boris-macos = "boris.core:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true


[tool.ruff]
line-length = 140
exclude = ["*_ui.py", "mpv*"]


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

